k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-14504
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-14504
  template:
    metadata:
      labels:
        app: webapp-14504
    spec:
      serviceAccountName: webapp-sa-14504
      containers:
      - name: webapp-14504
        image: selva14504/my-python-app
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: webapp-pvc-14504
