k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service-14504
spec:
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
