k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: webapp-route-14504
spec:
  to:
    kind: Service
    name: webapp-service-14504
  port:
    targetPort: 5000
  tls:
    termination: edge
